[package]
name = "proxy-config"
description = "This is a simple library to help you get the proxy configuration from the system."
version = "0.1.0"
edition = "2021"
authors = ["BppleMan"]
license = "Apache-2.0"
homepage = "https://github.com/dragit-git/proxy_config"
repository = "https://github.com/dragit-git/proxy_config"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
color-eyre = "0.6.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[target.'cfg(target_os = "macos")'.dependencies]
fruity = { version = "0.3.0", features = ["foundation", "cf_network"] }
core-foundation = "0.9.3"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winhttp", "libloaderapi", "impl-default", "errhandlingapi", "winbase"] }
